 hardware/                 Locally Removed           134 

Directory modules/bluespec/common/fpgaenv/fpga-components/hardware
 FpgaMemory.bsv            Locally Removed           134 
 Clock100MHz.v             Locally Removed           134 
 FpgaMemoryHasim.bsv       Locally Removed           134 
 FAST_BRAM.v               Locally Removed           134 
 hardware-fpga-components.awb Locally Removed           134 
 Clock100MHz.bsv           Locally Removed           134 
 Bram.v                    Locally Removed           134 
 FAST_BRAM.bsv             Locally Removed           134 

Directory .
 changes                   Locally Modified          134 

- move files from fpga-components/{hardware,software} into a single directory fpga-components, so that the awb files can share sources.
- Modifications to the FAST blockram, in an attempt to make software and hardware simulation as close to each other as possible.

----------
napatil     Date: Mon Jul 28 18:05:55 EDT 2008  CSN: CSN-platforms-136
                  Mon Jul 28 22:05:55 UTC 2008


Directory modules/bluespec/common/fpgaenv/fpga-components
 FpgaMemory.bsv            Locally Modified          135 
 software-fpga-components.awb Locally Modified          135 
 hardware-fpga-components.awb Locally Modified          135 
 Bram.v                    Locally Added               0 

DO NOT DELETE THIS LINE! ADD COMMENTS BELOW
reverting to blockram from csn-platforms-131

----------
aparasha    Date: Thu Jul 31 12:46:49 EDT 2008  CSN: CSN-platforms-137
                  Thu Jul 31 16:46:49 UTC 2008


Directory modules/bluespec/common/fpgaenv/virtual-platform/virtual-devices/front-panel/hybrid
 hybrid-fp.cpp             Locally Modified          136 
 hybrid-fp.rrr             Locally Modified          136 
 hybrid-fp.h               Locally Modified          136 
 hybrid-fp.bsv             Locally Modified          136 

Updated front panel to use client software stubs